# PG2

./: .gitignore  CMakeLists.txt  CMakePresets.json  Mesh.hpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  README.md  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  app.cpp  app.hpp  app_assets.cpp  app_collision.cpp  app_gameplay.cpp  app_input.cpp  app_render.cpp  assets.hpp  audio.cpp  audio.hpp  callbacks.cpp  camera.hpp  config.json  fps_meter.hpp  fps_meter_usage.cpp  getinfo.cpp  getinfo.hpp  gl_err_callback.cpp  helloworld.cpp  main.cpp  non_copyable.hpp  oit_composite.frag  oit_composite.vert  shader.frag  shader.vert  start.bat  time_measure.cpp  vcpkg.json
objects/: gen_hex_pedestal.py  gen_hub_shell.ps1  gen_icosa.py  gen_icosa_cut.py  orc_solid.mtl
